router.macaroons/ rest api POST/GET uri
